@@ -1,36 +1,40 @@
 package uk.gov.hmcts.reform.sscs.ccd.presubmit.directionissued;
 
 import static java.util.Collections.emptySet;
-import static org.hamcrest.CoreMatchers.hasItem;
-import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
+import static org.mockito.MockitoAnnotations.openMocks;
 import static uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType.ABOUT_TO_SUBMIT;
 import static uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType.MID_EVENT;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.DwpState.DIRECTION_ACTION_REQUIRED;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.InterlocReferralReason.REJECT_HEARING_RECORDING_REQUEST;
-import static uk.gov.hmcts.reform.sscs.ccd.domain.InterlocReviewState.*;
+import static uk.gov.hmcts.reform.sscs.ccd.domain.InterlocReviewState.AWAITING_ADMIN_ACTION;
+import static uk.gov.hmcts.reform.sscs.ccd.domain.InterlocReviewState.AWAITING_INFORMATION;
+import static uk.gov.hmcts.reform.sscs.ccd.domain.InterlocReviewState.NONE;
+import static uk.gov.hmcts.reform.sscs.ccd.domain.InterlocReviewState.WELSH_TRANSLATION;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.State.READY_TO_LIST;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.State.VALID_APPEAL;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.YesNo.NO;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.YesNo.YES;
 
-import com.google.common.collect.ImmutableSet;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import junitparams.JUnitParamsRunner;
-import junitparams.Parameters;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import java.util.Set;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
+import org.junit.jupiter.params.provider.EnumSource;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnit;
-import org.mockito.junit.MockitoRule;
 import uk.gov.hmcts.reform.sscs.ccd.callback.Callback;
 import uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType;
 import uk.gov.hmcts.reform.sscs.ccd.callback.DocumentType;
@@ -43,15 +47,11 @@ import uk.gov.hmcts.reform.sscs.service.DwpAddressLookupService;
 import uk.gov.hmcts.reform.sscs.service.FooterService;
 import uk.gov.hmcts.reform.sscs.service.ServiceRequestExecutor;
 
-@RunWith(JUnitParamsRunner.class)
-public class DirectionIssuedAboutToSubmitHandlerTest {
+class DirectionIssuedAboutToSubmitHandlerTest {
     private static final String USER_AUTHORISATION = "Bearer token";
     private static final String DOCUMENT_URL = "dm-store/documents/123";
     private static final String DOCUMENT_URL2 = "dm-store/documents/456";
     private static final String DUMMY_REGIONAL_CENTER = "dummyRegionalCenter";
-
-    @Rule
-    public MockitoRule rule = MockitoJUnit.rule();
 
     @Mock
     private FooterService footerService;
@@ -80,12 +80,12 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
     private SscsWelshDocument expectedWelshDocument;
 
     @Mock
-    private PreSubmitCallbackResponse<SscsCaseData> response;
+    private PreSubmitCallbackResponse<SscsCaseData> mockedResponse;
 
-    @Before
+    @BeforeEach
     public void setUp() {
+        openMocks(this);
         handler = new DirectionIssuedAboutToSubmitHandler(footerService, dwpAddressLookupService, 35, 42, false);
-
         when(callback.getEvent()).thenReturn(EventType.DIRECTION_ISSUED);
 
         SscsDocument document = SscsDocument.builder().value(SscsDocumentDetails.builder().documentFileName("myTest.doc").build()).build();
@@ -109,19 +109,19 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
                 .build())
             .sscsDocument(docs)
             .appeal(Appeal.builder()
-                    .appellant(Appellant.builder()
-                            .name(Name.builder().build())
-                            .identity(Identity.builder().build())
-                            .build())
-                    .build()).build();
+                .appellant(Appellant.builder()
+                    .name(Name.builder().build())
+                    .identity(Identity.builder().build())
+                    .build())
+                .build()).build();
 
         expectedDocument = SscsDocument.builder()
-                .value(SscsDocumentDetails.builder()
-                        .documentFileName(sscsCaseData.getDocumentStaging().getPreviewDocument().getDocumentFilename())
-                        .documentLink(sscsCaseData.getDocumentStaging().getPreviewDocument())
-                        .documentDateAdded(LocalDate.now().minusDays(1).toString())
-                        .documentType(DocumentType.DIRECTION_NOTICE.getValue())
-                        .build()).build();
+            .value(SscsDocumentDetails.builder()
+                .documentFileName(sscsCaseData.getDocumentStaging().getPreviewDocument().getDocumentFilename())
+                .documentLink(sscsCaseData.getDocumentStaging().getPreviewDocument())
+                .documentDateAdded(LocalDate.now().minusDays(1).toString())
+                .documentType(DocumentType.DIRECTION_NOTICE.getValue())
+                .build()).build();
 
 
         when(callback.getCaseDetails()).thenReturn(caseDetails);
@@ -129,39 +129,39 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
         when(caseDetails.getCaseData()).thenReturn(sscsCaseData);
         when(caseDetails.getState()).thenReturn(State.INTERLOCUTORY_REVIEW_STATE);
         when(caseDetailsBefore.getState()).thenReturn(State.INTERLOCUTORY_REVIEW_STATE);
-        when(response.getErrors()).thenReturn(emptySet());
+        when(mockedResponse.getErrors()).thenReturn(emptySet());
 
         when(dwpAddressLookupService.getDwpRegionalCenterByBenefitTypeAndOffice(anyString(), anyString())).thenReturn(DUMMY_REGIONAL_CENTER);
         when(dwpAddressLookupService.getDefaultDwpMappingByBenefitType(anyString())).thenReturn(Optional.of(OfficeMapping.builder().isDefault(true).mapping(Mapping.builder().ccd("DWP PIP (1)").build()).build()));
     }
 
-    @Test
-    @Parameters({"APPEAL_RECEIVED", "ACTION_FURTHER_EVIDENCE"})
-    public void givenANonHandleEvidenceEvent_thenReturnFalse(EventType eventType) {
+    @ParameterizedTest
+    @EnumSource(value = EventType.class, names = {"APPEAL_RECEIVED", "ACTION_FURTHER_EVIDENCE"})
+    void givenANonHandleEvidenceEvent_thenReturnFalse(EventType eventType) {
         when(callback.getEvent()).thenReturn(eventType);
         assertFalse(handler.canHandle(MID_EVENT, callback));
     }
 
-    @Test
-    @Parameters({"DIRECTION_ISSUED", "DIRECTION_ISSUED_WELSH"})
-    public void givenAValidHandleAndEventType_thenReturnTrue(EventType eventType) {
+    @ParameterizedTest
+    @EnumSource(value = EventType.class, names = {"DIRECTION_ISSUED", "DIRECTION_ISSUED_WELSH"})
+    void givenAValidHandleAndEventType_thenReturnTrue(EventType eventType) {
         when(callback.getEvent()).thenReturn(eventType);
         assertTrue(handler.canHandle(ABOUT_TO_SUBMIT, callback));
     }
 
-    @Test
-    @Parameters({"ABOUT_TO_START", "MID_EVENT", "SUBMITTED"})
-    public void givenANonCallbackType_thenReturnFalse(CallbackType callbackType) {
+    @ParameterizedTest
+    @EnumSource(value = CallbackType.class, names = {"ABOUT_TO_START", "MID_EVENT", "SUBMITTED"})
+    void givenANonCallbackType_thenReturnFalse(CallbackType callbackType) {
         assertFalse(handler.canHandle(callbackType, callback));
     }
 
     @Test
-    public void givenGenerateNoticeIsYes_thenReturnTrue() {
+    void givenGenerateNoticeIsYes_thenReturnTrue() {
         assertTrue(handler.canHandle(ABOUT_TO_SUBMIT, callback));
     }
 
     @Test
-    public void willCopyThePreviewFileToTheInterlocDirectionDocumentAndAddFooter() {
+    void willCopyThePreviewFileToTheInterlocDirectionDocumentAndAddFooter() {
         when(caseDetails.getState()).thenReturn(State.READY_TO_LIST);
         final PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
         assertNull(response.getData().getDocumentStaging().getPreviewDocument());
@@ -176,7 +176,7 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenDirectionNoticeAlreadyExistsAndThenManuallyUploadANewNotice_thenIssueTheNewDocumentWithFooter() {
+    void givenDirectionNoticeAlreadyExistsAndThenManuallyUploadANewNotice_thenIssueTheNewDocumentWithFooter() {
         handler = new DirectionIssuedAboutToSubmitHandler(footerService, dwpAddressLookupService, 35, 42, true);
         sscsCaseData.setPrePostHearing(PrePostHearing.PRE);
         sscsCaseData.getDocumentStaging().setPreviewDocument(null);
@@ -186,13 +186,13 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
                 .documentType(DocumentType.DIRECTION_NOTICE.getValue())
                 .documentFileName("file.pdf")
                 .documentLink(DocumentLink.builder().documentFilename("file.pdf").documentUrl(DOCUMENT_URL).build()).build())
-                .build();
+            .build();
 
         SscsInterlocDirectionDocument theDocument = SscsInterlocDirectionDocument.builder()
-                .documentType(DocumentType.DIRECTION_NOTICE.getValue())
-                .documentFileName("file.pdf")
-                .documentLink(DocumentLink.builder().documentFilename("file.pdf").documentUrl(DOCUMENT_URL2).build())
-                .documentDateAdded(LocalDate.now()).build();
+            .documentType(DocumentType.DIRECTION_NOTICE.getValue())
+            .documentFileName("file.pdf")
+            .documentLink(DocumentLink.builder().documentFilename("file.pdf").documentUrl(DOCUMENT_URL2).build())
+            .documentDateAdded(LocalDate.now()).build();
 
         sscsCaseData.setSscsInterlocDirectionDocument(theDocument);
 
@@ -204,13 +204,14 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
         verify(footerService).createFooterAndAddDocToCase(eq(theDocument.getDocumentLink()), any(), eq(DocumentType.DIRECTION_NOTICE), any(), eq(theDocument.getDocumentDateAdded()), eq(null), eq(null));
     }
 
-    public void willSetTheWithDwpStateToDirectionActionRequired() {
+    @Test
+    void willSetTheWithDwpStateToDirectionActionRequired() {
         final PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
-        assertThat(response.getData().getDwpState(), is(DIRECTION_ACTION_REQUIRED));
+        assertEquals(DIRECTION_ACTION_REQUIRED, response.getData().getDwpState());
     }
 
     @Test
-    public void givenDirectionTypeIsNull_displayAnError() {
+    void givenDirectionTypeIsNull_displayAnError() {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(null);
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
@@ -220,7 +221,7 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
     }
 
     @SuppressWarnings({"Indentation", "unused"})
-    private Object[] getDirectionNoticeConfidentialMembers() {
+    private static Object[] getDirectionNoticeConfidentialMembers() {
         return new Object[]{
             new Object[]{ConfidentialityType.GENERAL.getCode(), false, DIRECTION_ACTION_REQUIRED},
             new Object[]{ConfidentialityType.CONFIDENTIAL.getCode(), true, DIRECTION_ACTION_REQUIRED},
@@ -231,20 +232,20 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
         };
     }
 
-    @Test
-    @Parameters(method = "getDirectionNoticeConfidentialMembers")
-    public void givenDirectionNoticeCheckFtaStateBasedOnConfidentiality(String confidentialityType, boolean isFtaChosen, DwpState newFtaState) {
+    @ParameterizedTest
+    @MethodSource("getDirectionNoticeConfidentialMembers")
+    void givenDirectionNoticeCheckFtaStateBasedOnConfidentiality(String confidentialityType, boolean isFtaChosen, DwpState newFtaState) {
         SscsCaseData caseData = callback.getCaseDetails().getCaseData();
         caseData.setConfidentialityType(confidentialityType);
         caseData.setSendDirectionNoticeToFTA(isFtaChosen ? YES : NO);
         caseData.setDirectionDueDate(LocalDate.now().toString());
 
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
-        assertThat(response.getData().getDwpState(), is(newFtaState));
+        assertEquals(newFtaState, response.getData().getDwpState());
     }
 
     @Test
-    public void givenDirectionTypeOfProvideInformation_setInterlocStateToAwaitingInformationAndDirectionTypeIsNull() {
+    void givenDirectionTypeOfProvideInformation_setInterlocStateToAwaitingInformationAndDirectionTypeIsNull() {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.PROVIDE_INFORMATION.toString()));
         sscsCaseData.setDirectionDueDate("11/07/2025");
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
@@ -253,7 +254,7 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenDirectionTypeOfAppealToProceedAndCaseIsPreValidInterloc_setInterlocStateToAwaitingAdminActionAndDirectionTypeIsSet() {
+    void givenDirectionTypeOfAppealToProceedAndCaseIsPreValidInterloc_setInterlocStateToAwaitingAdminActionAndDirectionTypeIsSet() {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.APPEAL_TO_PROCEED.toString()));
         when(caseDetails.getState()).thenReturn(State.INTERLOCUTORY_REVIEW_STATE);
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
@@ -265,9 +266,9 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenDirectionTypeOfAppealToProceedAndCaseIsPreValidInterloc_willNotReturnValidationErrorsFromExternalService() {
+    void givenDirectionTypeOfAppealToProceedAndCaseIsPreValidInterloc_willNotReturnValidationErrorsFromExternalService() {
         String errorMessage = "There was an error in the external service";
-        when(response.getErrors()).thenReturn(ImmutableSet.of(errorMessage));
+        when(mockedResponse.getErrors()).thenReturn(Set.of(errorMessage));
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.APPEAL_TO_PROCEED.toString()));
         when(caseDetails.getState()).thenReturn(State.INTERLOCUTORY_REVIEW_STATE);
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
@@ -276,7 +277,7 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenDirectionTypeOfAppealToProceedAndCaseIsPostValidInterloc_setInterlocStateToAwaitingAdminActionAndDirectionTypeIsSet() {
+    void givenDirectionTypeOfAppealToProceedAndCaseIsPostValidInterloc_setInterlocStateToAwaitingAdminActionAndDirectionTypeIsSet() {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.APPEAL_TO_PROCEED.toString()));
         when(caseDetailsBefore.getState()).thenReturn(State.WITH_DWP);
         when(caseDetails.getState()).thenReturn(State.WITH_DWP);
@@ -285,12 +286,12 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
 
         assertNull(response.getData().getInterlocReviewState());
         assertNull(response.getData().getDateSentToDwp());
-        assertThat(response.getData().getDwpState(), is(DwpState.DIRECTION_ACTION_REQUIRED));
+        assertEquals(DwpState.DIRECTION_ACTION_REQUIRED, response.getData().getDwpState());
     }
 
-    @Test
-    @Parameters({"pip, 35", "childSupport, 42"})
-    public void givenDirectionTypeOfAppealToProceed_shouldSetDwpRegionalCentre(String benefitType, int expectedResponseDays) {
+    @ParameterizedTest
+    @CsvSource({"pip, 35", "childSupport, 42"})
+    void givenDirectionTypeOfAppealToProceed_shouldSetDwpRegionalCentre(String benefitType, int expectedResponseDays) {
         Appeal appeal = callback.getCaseDetails().getCaseData().getAppeal();
         appeal.setBenefitType(BenefitType.builder().code(benefitType).build());
         appeal.setMrnDetails(MrnDetails.builder().dwpIssuingOffice("DWP PIP (1)").build());
@@ -302,32 +303,32 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
 
         assertEquals(AWAITING_ADMIN_ACTION, response.getData().getInterlocReviewState());
         assertNotNull(response.getData().getDateSentToDwp());
-        assertThat(response.getData().getDwpDueDate(), is(LocalDate.now().plusDays(expectedResponseDays).toString()));
-        assertThat(response.getData().getDwpState(), is(DwpState.DIRECTION_ACTION_REQUIRED));
+        assertEquals(response.getData().getDwpDueDate(), LocalDate.now().plusDays(expectedResponseDays).toString());
+        assertEquals(DwpState.DIRECTION_ACTION_REQUIRED, response.getData().getDwpState());
         assertEquals(DUMMY_REGIONAL_CENTER, response.getData().getDwpRegionalCentre());
     }
 
-    @Test
-    @Parameters({"pip, 35", "childSupport, 42"})
-    public void givenDirectionTypeOfAppealToProceedWhenDwpIssuingOfficeIsNull_shouldSetDefaultDwpRegionalCentre(String benefitType, int expectedResponseDays) {
+    @ParameterizedTest
+    @CsvSource({"pip, 35", "childSupport, 42"})
+    void givenDirectionTypeOfAppealToProceedWhenDwpIssuingOfficeIsNull_shouldSetDefaultDwpRegionalCentre(String benefitType, int expectedResponseDays) {
         Appeal appeal = callback.getCaseDetails().getCaseData().getAppeal();
         appeal.setBenefitType(BenefitType.builder().code(benefitType).build());
         appeal.setMrnDetails(MrnDetails.builder().build());
         assertDefaultRegionalCentre(expectedResponseDays);
     }
 
-    @Test
-    @Parameters({"pip, 35", "childSupport, 42"})
-    public void givenDirectionTypeOfAppealToProceedWhenDwpIssuingOfficeIsEmpty_shouldSetDefaultDwpRegionalCentre(String benefitType, int expectedResponseDays) {
+    @ParameterizedTest
+    @CsvSource({"pip, 35", "childSupport, 42"})
+    void givenDirectionTypeOfAppealToProceedWhenDwpIssuingOfficeIsEmpty_shouldSetDefaultDwpRegionalCentre(String benefitType, int expectedResponseDays) {
         Appeal appeal = callback.getCaseDetails().getCaseData().getAppeal();
         appeal.setBenefitType(BenefitType.builder().code(benefitType).build());
         appeal.setMrnDetails(MrnDetails.builder().dwpIssuingOffice("").build());
         assertDefaultRegionalCentre(expectedResponseDays);
     }
 
-    @Test
-    @Parameters({"pip, 35", "childSupport, 42"})
-    public void givenDirectionTypeOfAppealToProceedWhenNoMrnDetails_shouldSetDefaultDwpRegionalCentre(String benefitType, int expectedResponseDays) {
+    @ParameterizedTest
+    @CsvSource({"pip, 35", "childSupport, 42"})
+    void givenDirectionTypeOfAppealToProceedWhenNoMrnDetails_shouldSetDefaultDwpRegionalCentre(String benefitType, int expectedResponseDays) {
         Appeal appeal = callback.getCaseDetails().getCaseData().getAppeal();
         appeal.setBenefitType(BenefitType.builder().code(benefitType).build());
         appeal.setMrnDetails(null);
@@ -343,23 +344,23 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
 
         assertEquals(AWAITING_ADMIN_ACTION, response.getData().getInterlocReviewState());
         assertNotNull(response.getData().getDateSentToDwp());
-        assertThat(response.getData().getDwpDueDate(), is(LocalDate.now().plusDays(expectedResponseDays).toString()));
-        assertThat(response.getData().getDwpState(), is(DwpState.DIRECTION_ACTION_REQUIRED));
+        assertEquals(response.getData().getDwpDueDate(), LocalDate.now().plusDays(expectedResponseDays).toString());
+        assertEquals(DwpState.DIRECTION_ACTION_REQUIRED, response.getData().getDwpState());
         assertEquals(DUMMY_REGIONAL_CENTER, response.getData().getDwpRegionalCentre());
     }
 
     @Test
-    public void givenDirectionTypeOfGrantExtension_setDwpStateAndDirectionTypeIsNotSet() {
+    void givenDirectionTypeOfGrantExtension_setDwpStateAndDirectionTypeIsNotSet() {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.GRANT_EXTENSION.toString()));
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
         assertNull(response.getData().getInterlocReviewState());
-        assertThat(response.getData().getDwpState(), is(DwpState.DIRECTION_ACTION_REQUIRED));
+        assertEquals(DwpState.DIRECTION_ACTION_REQUIRED, response.getData().getDwpState());
     }
 
-    @Test
-    @Parameters({"pip, 35", "childSupport, 42"})
-    public void givenDirectionTypeOfRefuseExtensionAndExtensionNextEventIsSendToListing_setResponseReceivedStateAndInterlocStateToAwaitingAdminAction(String benefitType, int expectedResponseDays) {
+    @ParameterizedTest
+    @CsvSource({"pip, 35", "childSupport, 42"})
+    void givenDirectionTypeOfRefuseExtensionAndExtensionNextEventIsSendToListing_setResponseReceivedStateAndInterlocStateToAwaitingAdminAction(String benefitType, int expectedResponseDays) {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.REFUSE_EXTENSION.toString()));
 
         callback.getCaseDetails().getCaseData().setExtensionNextEventDl(new DynamicList(ExtensionNextEvent.SEND_TO_LISTING.toString()));
@@ -371,9 +372,9 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
         assertValues(response, AWAITING_ADMIN_ACTION, DIRECTION_ACTION_REQUIRED, State.RESPONSE_RECEIVED, expectedResponseDays);
     }
 
-    @Test
-    @Parameters({"pip, 35", "childSupport, 42"})
-    public void givenDirectionTypeOfRefuseExtensionAndExtensionNextEventIsSendToValidAppeal_setWithDwpStateAndDoNotSetInterlocState(String benefitType, int expectedResponseDays) {
+    @ParameterizedTest
+    @CsvSource({"pip, 35", "childSupport, 42"})
+    void givenDirectionTypeOfRefuseExtensionAndExtensionNextEventIsSendToValidAppeal_setWithDwpStateAndDoNotSetInterlocState(String benefitType, int expectedResponseDays) {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.REFUSE_EXTENSION.toString()));
         callback.getCaseDetails().getCaseData().setExtensionNextEventDl(new DynamicList(ExtensionNextEvent.SEND_TO_VALID_APPEAL.toString()));
         callback.getCaseDetails().getCaseData().getAppeal().setBenefitType(BenefitType.builder().code(benefitType).build());
@@ -384,7 +385,7 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenDirectionTypeOfGrantReinstatementAndNotInterlocReview_setState() {
+    void givenDirectionTypeOfGrantReinstatementAndNotInterlocReview_setState() {
 
         callback.getCaseDetails().getCaseData().setState(State.DORMANT_APPEAL_STATE);
         callback.getCaseDetails().getCaseData().setPreviousState(State.APPEAL_CREATED);
@@ -396,14 +397,14 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.GRANT_REINSTATEMENT.toString()));
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertTrue(response.getData().getState().equals(State.APPEAL_CREATED));
-        assertTrue(response.getData().getReinstatementOutcome().equals(RequestOutcome.GRANTED));
+        assertEquals(State.APPEAL_CREATED, response.getData().getState());
+        assertEquals(RequestOutcome.GRANTED, response.getData().getReinstatementOutcome());
         assertEquals(DwpState.REINSTATEMENT_GRANTED, response.getData().getDwpState());
         assertNull(response.getData().getInterlocReviewState());
     }
 
     @Test
-    public void givenDirectionTypeOfGrantReinstatementAndInterlocReview_setState() {
+    void givenDirectionTypeOfGrantReinstatementAndInterlocReview_setState() {
 
         callback.getCaseDetails().getCaseData().setState(State.DORMANT_APPEAL_STATE);
         callback.getCaseDetails().getCaseData().setPreviousState(State.INTERLOCUTORY_REVIEW_STATE);
@@ -414,14 +415,14 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.GRANT_REINSTATEMENT.toString()));
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertTrue(response.getData().getState().equals(State.INTERLOCUTORY_REVIEW_STATE));
-        assertTrue(response.getData().getReinstatementOutcome().equals(RequestOutcome.GRANTED));
-        assertTrue(response.getData().getInterlocReviewState().equals(AWAITING_ADMIN_ACTION));
+        assertEquals(State.INTERLOCUTORY_REVIEW_STATE, response.getData().getState());
+        assertEquals(RequestOutcome.GRANTED, response.getData().getReinstatementOutcome());
+        assertEquals(AWAITING_ADMIN_ACTION, response.getData().getInterlocReviewState());
         assertEquals(DwpState.REINSTATEMENT_GRANTED, response.getData().getDwpState());
     }
 
     @Test
-    public void givenDirectionTypeOfRefuseReinstatementkeepState() {
+    void givenDirectionTypeOfRefuseReinstatementkeepState() {
 
         callback.getCaseDetails().getCaseData().setState(State.DORMANT_APPEAL_STATE);
         callback.getCaseDetails().getCaseData().setPreviousState(State.APPEAL_CREATED);
@@ -432,14 +433,14 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.REFUSE_REINSTATEMENT.toString()));
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertTrue(response.getData().getState().equals(State.DORMANT_APPEAL_STATE));
-        assertTrue(response.getData().getReinstatementOutcome().equals(RequestOutcome.REFUSED));
+        assertEquals(State.DORMANT_APPEAL_STATE, response.getData().getState());
+        assertEquals(RequestOutcome.REFUSED, response.getData().getReinstatementOutcome());
         assertNull(response.getData().getInterlocReviewState());
         assertEquals(DwpState.REINSTATEMENT_REFUSED, response.getData().getDwpState());
     }
 
     @Test
-    public void givenDirectionTypeOfGrantReinstatementForWelshCaseDont_setStates() {
+    void givenDirectionTypeOfGrantReinstatementForWelshCaseDont_setStates() {
 
         callback.getCaseDetails().getCaseData().setState(State.DORMANT_APPEAL_STATE);
         callback.getCaseDetails().getCaseData().setPreviousState(State.APPEAL_CREATED);
@@ -452,15 +453,15 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.GRANT_REINSTATEMENT.toString()));
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertTrue(response.getData().getState().equals(State.DORMANT_APPEAL_STATE));
-        assertTrue(response.getData().getReinstatementOutcome().equals(RequestOutcome.IN_PROGRESS));
+        assertEquals(State.DORMANT_APPEAL_STATE, response.getData().getState());
+        assertEquals(RequestOutcome.IN_PROGRESS, response.getData().getReinstatementOutcome());
         assertEquals(DwpState.LAPSED, response.getData().getDwpState());
         assertEquals(WELSH_TRANSLATION, response.getData().getInterlocReviewState());
         assertEquals("Yes", response.getData().getTranslationWorkOutstanding());
     }
 
     @Test
-    public void givenDirectionTypeOfRefuseReinstatementForWelshCaseDont_setStates() {
+    void givenDirectionTypeOfRefuseReinstatementForWelshCaseDont_setStates() {
 
         callback.getCaseDetails().getCaseData().setState(State.DORMANT_APPEAL_STATE);
         callback.getCaseDetails().getCaseData().setPreviousState(State.APPEAL_CREATED);
@@ -473,15 +474,15 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.REFUSE_REINSTATEMENT.toString()));
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertTrue(response.getData().getState().equals(State.DORMANT_APPEAL_STATE));
-        assertTrue(response.getData().getReinstatementOutcome().equals(RequestOutcome.IN_PROGRESS));
+        assertEquals(State.DORMANT_APPEAL_STATE, response.getData().getState());
+        assertEquals(RequestOutcome.IN_PROGRESS, response.getData().getReinstatementOutcome());
         assertEquals(DwpState.LAPSED, response.getData().getDwpState());
         assertEquals(WELSH_TRANSLATION, response.getData().getInterlocReviewState());
         assertEquals("Yes", response.getData().getTranslationWorkOutstanding());
     }
 
     @Test
-    public void givenDirectionTypeOfGrantUrgentHearingAndInterlocReview_setState() {
+    void givenDirectionTypeOfGrantUrgentHearingAndInterlocReview_setState() {
 
         callback.getCaseDetails().getCaseData().setState(State.INTERLOCUTORY_REVIEW_STATE);
         callback.getCaseDetails().getCaseData().setPreviousState(State.DORMANT_APPEAL_STATE);
@@ -492,14 +493,14 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.GRANT_URGENT_HEARING.toString()));
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertTrue(response.getData().getState().equals(State.INTERLOCUTORY_REVIEW_STATE));
-        assertTrue(response.getData().getUrgentHearingOutcome().equals(RequestOutcome.GRANTED.getValue()));
-        assertTrue(response.getData().getInterlocReviewState().equals(AWAITING_ADMIN_ACTION));
+        assertEquals(State.INTERLOCUTORY_REVIEW_STATE, response.getData().getState());
+        assertEquals(RequestOutcome.GRANTED.getValue(), response.getData().getUrgentHearingOutcome());
+        assertEquals(AWAITING_ADMIN_ACTION, response.getData().getInterlocReviewState());
         assertEquals(DIRECTION_ACTION_REQUIRED, response.getData().getDwpState());
     }
 
     @Test
-    public void givenDirectionTypeOfRefuseUrgentHearingkeepState() {
+    void givenDirectionTypeOfRefuseUrgentHearingkeepState() {
 
         callback.getCaseDetails().getCaseData().setState(State.DORMANT_APPEAL_STATE);
         callback.getCaseDetails().getCaseData().setPreviousState(State.APPEAL_CREATED);
@@ -511,15 +512,15 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.REFUSE_URGENT_HEARING.toString()));
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertTrue(response.getData().getState().equals(State.DORMANT_APPEAL_STATE));
-        assertTrue(response.getData().getUrgentHearingOutcome().equals(RequestOutcome.REFUSED.getValue()));
-        assertTrue(response.getData().getInterlocReviewState().equals(NONE));
+        assertEquals(State.DORMANT_APPEAL_STATE, response.getData().getState());
+        assertEquals(RequestOutcome.REFUSED.getValue(), response.getData().getUrgentHearingOutcome());
+        assertEquals(NONE, response.getData().getInterlocReviewState());
         assertTrue("No".equalsIgnoreCase(response.getData().getUrgentCase()));
         assertEquals(DIRECTION_ACTION_REQUIRED, response.getData().getDwpState());
     }
 
     @Test
-    public void givenDirectionTypeOfRefuseHearingRecordingRequest_setInterlocReviewStateAndInterlocReferralReason() {
+    void givenDirectionTypeOfRefuseHearingRecordingRequest_setInterlocReviewStateAndInterlocReferralReason() {
 
         callback.getCaseDetails().getCaseData().setState(State.DORMANT_APPEAL_STATE);
         callback.getCaseDetails().getCaseData().setReinstatementOutcome(RequestOutcome.IN_PROGRESS);
@@ -528,21 +529,36 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.REFUSE_HEARING_RECORDING_REQUEST.toString()));
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertTrue(response.getData().getState().equals(State.DORMANT_APPEAL_STATE));
-        assertTrue(response.getData().getInterlocReviewState().equals(AWAITING_ADMIN_ACTION));
+        assertEquals(State.DORMANT_APPEAL_STATE, response.getData().getState());
+        assertEquals(AWAITING_ADMIN_ACTION, response.getData().getInterlocReviewState());
         assertEquals(REJECT_HEARING_RECORDING_REQUEST, response.getData().getInterlocReferralReason());
         assertEquals(DIRECTION_ACTION_REQUIRED, response.getData().getDwpState());
     }
 
     @Test
-    @Parameters({"file.png", "file.jpg", "file.doc"})
-    public void givenManuallyUploadedFileIsNotAPdf_thenAddAnErrorToResponse(String filename) {
+    void givenDirectionTypeOfIssueAndSendToAdmin_setInterlocReviewStateOnly() {
+        callback.getCaseDetails().getCaseData().setState(State.DORMANT_APPEAL_STATE);
+        callback.getCaseDetails().getCaseData().setReinstatementOutcome(RequestOutcome.IN_PROGRESS);
+        callback.getCaseDetails().getCaseData().setDwpState(DwpState.LAPSED);
+
+        callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.ISSUE_AND_SEND_TO_ADMIN.toString()));
+        PreSubmitCallbackResponse<SscsCaseData> res = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
+
+        assertEquals(State.DORMANT_APPEAL_STATE, res.getData().getState());
+        assertEquals(AWAITING_ADMIN_ACTION, res.getData().getInterlocReviewState());
+        assertNull(res.getData().getInterlocReferralReason());
+        assertEquals(DIRECTION_ACTION_REQUIRED, res.getData().getDwpState());
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"file.png", "file.jpg", "file.doc"})
+    void givenManuallyUploadedFileIsNotAPdf_thenAddAnErrorToResponse(String filename) {
         sscsCaseData.getDocumentStaging().setPreviewDocument(null);
 
         SscsInterlocDirectionDocument theDocument = SscsInterlocDirectionDocument.builder()
-                .documentType(DocumentType.DECISION_NOTICE.getValue())
-                .documentLink(DocumentLink.builder().documentFilename(filename).documentUrl(DOCUMENT_URL).build())
-                .documentDateAdded(LocalDate.now()).build();
+            .documentType(DocumentType.DECISION_NOTICE.getValue())
+            .documentLink(DocumentLink.builder().documentFilename(filename).documentUrl(DOCUMENT_URL).build())
+            .documentDateAdded(LocalDate.now()).build();
 
         sscsCaseData.setSscsInterlocDirectionDocument(theDocument);
 
@@ -555,7 +571,7 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenNoPdfIsUploaded_thenAddAnErrorToResponse() {
+    void givenNoPdfIsUploaded_thenAddAnErrorToResponse() {
         sscsCaseData.getDocumentStaging().setPreviewDocument(null);
 
         sscsCaseData.setSscsInterlocDirectionDocument(null);
@@ -569,7 +585,7 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void shouldErrorWhenDirectionTypeIsProvideInformationAndNoDueDate() {
+    void shouldErrorWhenDirectionTypeIsProvideInformationAndNoDueDate() {
         sscsCaseData.setDirectionDueDate(null);
         sscsCaseData.getDirectionTypeDl().setValue(new DynamicListItem(DirectionType.PROVIDE_INFORMATION.toString(), "appeal To Proceed"));
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
@@ -579,7 +595,7 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenDecisionIssuedEventAndCaseIsWelsh_SetFieldsAndCallServicesCorrectly() {
+    void givenDecisionIssuedEventAndCaseIsWelsh_SetFieldsAndCallServicesCorrectly() {
         when(caseDetailsBefore.getState()).thenReturn(State.WITH_DWP);
         sscsCaseData.setLanguagePreferenceWelsh("Yes");
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.REFUSE_EXTENSION.toString()));
@@ -595,21 +611,21 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
         assertNotNull(response.getData().getExtensionNextEventDl());
 
         verify(footerService).createFooterAndAddDocToCase(eq(expectedDocument.getValue().getDocumentLink()),
-                any(), eq(DocumentType.DIRECTION_NOTICE), any(), any(), eq(null), eq(SscsDocumentTranslationStatus.TRANSLATION_REQUIRED));
+            any(), eq(DocumentType.DIRECTION_NOTICE), any(), any(), eq(null), eq(SscsDocumentTranslationStatus.TRANSLATION_REQUIRED));
 
         verifyNoInteractions(serviceRequestExecutor);
     }
 
     @Test
-    public void givenDecisionIssuedWelshEvent_SetFieldsAndCallServicesCorrectly() {
+    void givenDecisionIssuedWelshEvent_SetFieldsAndCallServicesCorrectly() {
 
         expectedWelshDocument = SscsWelshDocument.builder()
-                .value(SscsWelshDocumentDetails.builder()
-                        .documentFileName("welshDirectionDocFilename")
-                        .documentLink(DocumentLink.builder().documentUrl("welshUrl").documentBinaryUrl("welshBinaryUrl").build())
-                        .documentDateAdded(LocalDate.now().minusDays(1).toString())
-                        .documentType(DocumentType.DIRECTION_NOTICE.getValue())
-                        .build()).build();
+            .value(SscsWelshDocumentDetails.builder()
+                .documentFileName("welshDirectionDocFilename")
+                .documentLink(DocumentLink.builder().documentUrl("welshUrl").documentBinaryUrl("welshBinaryUrl").build())
+                .documentDateAdded(LocalDate.now().minusDays(1).toString())
+                .documentType(DocumentType.DIRECTION_NOTICE.getValue())
+                .build()).build();
         sscsCaseData.setSscsWelshDocuments(new ArrayList<>());
         sscsCaseData.getSscsWelshDocuments().add(expectedWelshDocument);
 
@@ -627,9 +643,9 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
         verifyNoInteractions(footerService);
     }
 
-    @Test
-    @Parameters({"pip, 35", "childSupport, 42"})
-    public void givenWelshDirectionTypeOfRefuseExtensionAndExtensionNextEventIsSendToListing_setResponseReceivedStateAndInterlocStateToAwaitingAdminAction(String benefitType, int expectedResponseDays) {
+    @ParameterizedTest
+    @CsvSource({"pip, 35", "childSupport, 42"})
+    void givenWelshDirectionTypeOfRefuseExtensionAndExtensionNextEventIsSendToListing_setResponseReceivedStateAndInterlocStateToAwaitingAdminAction(String benefitType, int expectedResponseDays) {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.REFUSE_EXTENSION.toString()));
         callback.getCaseDetails().getCaseData().setExtensionNextEventDl(new DynamicList(ExtensionNextEvent.SEND_TO_LISTING.toString()));
         callback.getCaseDetails().getCaseData().getAppeal().setBenefitType(BenefitType.builder().code(benefitType).build());
@@ -642,9 +658,9 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
         assertValues(response, AWAITING_ADMIN_ACTION, DIRECTION_ACTION_REQUIRED, State.RESPONSE_RECEIVED, expectedResponseDays);
     }
 
-    @Test
-    @Parameters({"pip, 35", "childSupport, 42"})
-    public void givenWelshDirectionTypeOfRefuseExtensionAndExtensionNextEventIsSendToValidAppeal_setWithDwpStateAndDoNotSetInterlocState(String benefitType, int expectedResponseDays) {
+    @ParameterizedTest
+    @CsvSource({"pip, 35", "childSupport, 42"})
+    void givenWelshDirectionTypeOfRefuseExtensionAndExtensionNextEventIsSendToValidAppeal_setWithDwpStateAndDoNotSetInterlocState(String benefitType, int expectedResponseDays) {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.REFUSE_EXTENSION.toString()));
         callback.getCaseDetails().getCaseData().setExtensionNextEventDl(new DynamicList(ExtensionNextEvent.SEND_TO_VALID_APPEAL.toString()));
         callback.getCaseDetails().getCaseData().getAppeal().setBenefitType(BenefitType.builder().code(benefitType).build());
@@ -658,29 +674,29 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenIssueDirectionNoticeForAppealToProceedForPreValidCase_thenSetNonDigitalToDigitalCase() {
+    void givenIssueDirectionNoticeForAppealToProceedForPreValidCase_thenSetNonDigitalToDigitalCase() {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.APPEAL_TO_PROCEED.toString()));
         when(caseDetails.getState()).thenReturn(State.INTERLOCUTORY_REVIEW_STATE);
         sscsCaseData.setCreatedInGapsFrom(null);
 
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertThat(response.getData().getCreatedInGapsFrom(), is(READY_TO_LIST.getId()));
+        assertEquals(response.getData().getCreatedInGapsFrom(), READY_TO_LIST.getId());
     }
 
     @Test
-    public void givenIssueDirectionNoticeForAppealToProceedForPreValidCase_thenSetNoDigitalToDigitalCase() {
+    void givenIssueDirectionNoticeForAppealToProceedForPreValidCase_thenSetNoDigitalToDigitalCase() {
         callback.getCaseDetails().getCaseData().setDirectionTypeDl(new DynamicList(DirectionType.APPEAL_TO_PROCEED.toString()));
         when(caseDetails.getState()).thenReturn(State.INCOMPLETE_APPLICATION);
         sscsCaseData.setCreatedInGapsFrom(VALID_APPEAL.getId());
 
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertThat(response.getData().getCreatedInGapsFrom(), is(READY_TO_LIST.getId()));
+        assertEquals(response.getData().getCreatedInGapsFrom(), READY_TO_LIST.getId());
     }
 
     @Test
-    public void shouldNotClearInterlocReferralReasonIfPostHearingsNotEnabled() {
+    void shouldNotClearInterlocReferralReasonIfPostHearingsNotEnabled() {
         sscsCaseData.setInterlocReferralReason(InterlocReferralReason.REVIEW_CORRECTION_APPLICATION);
 
         final PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
@@ -689,7 +705,7 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void shouldClearInterlocReferralReason() {
+    void shouldClearInterlocReferralReason() {
         handler = new DirectionIssuedAboutToSubmitHandler(footerService, dwpAddressLookupService, 35, 42, true);
         sscsCaseData.setInterlocReferralReason(InterlocReferralReason.REVIEW_CORRECTION_APPLICATION);
 
@@ -701,25 +717,25 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
     private void assertValues(PreSubmitCallbackResponse<SscsCaseData> response, InterlocReviewState interlocReviewState,
                               DwpState dwpState, State state, int expectedResponseDays) {
         assertEquals(interlocReviewState, response.getData().getInterlocReviewState());
-        assertThat(response.getData().getDwpState(), is(dwpState));
-        assertThat(response.getData().getState(), is(state));
-        assertThat(response.getData().getHmctsDwpState(), is("sentToDwp"));
-        assertThat(response.getData().getDateSentToDwp(), is(LocalDate.now().toString()));
-        assertThat(response.getData().getDwpDueDate(), is(LocalDate.now().plusDays(expectedResponseDays).toString()));
+        assertEquals(dwpState, response.getData().getDwpState());
+        assertEquals(state, response.getData().getState());
+        assertEquals("sentToDwp", response.getData().getHmctsDwpState());
+        assertEquals(LocalDate.now().toString(), response.getData().getDateSentToDwp());
+        assertEquals(LocalDate.now().plusDays(expectedResponseDays).toString(), response.getData().getDwpDueDate());
     }
 
     @Test
-    public void givenNoUploadedAndGeneratedDoc_thenReturnError() {
+    void givenNoUploadedAndGeneratedDoc_thenReturnError() {
         sscsCaseData.getDocumentGeneration().setGenerateNotice(NO);
 
         final PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
         assertFalse(response.getErrors().isEmpty());
-        assertThat(response.getErrors(), hasItem("You need to upload a PDF document"));
+        assertTrue(response.getErrors().contains("You need to upload a PDF document"));
     }
 
     @Test
-    public void givenGenerateNoticeIsYes_thenReturnCaseDataPreviewDoc() {
+    void givenGenerateNoticeIsYes_thenReturnCaseDataPreviewDoc() {
         DocumentLink url = sscsCaseData.getDocumentStaging().getPreviewDocument();
 
         handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
@@ -728,18 +744,18 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenGenerateNoticeIsSetToNoAndInterlocDocIsNotNull_thenReturnRelevantDocLink() {
+    void givenGenerateNoticeIsSetToNoAndInterlocDocIsNotNull_thenReturnRelevantDocLink() {
         sscsCaseData.getDocumentGeneration().setGenerateNotice(NO);
         assertFalse(sscsCaseData.getDocumentGeneration().getGenerateNotice().toBoolean());
 
         SscsInterlocDirectionDocument interlocDoc = SscsInterlocDirectionDocument.builder()
-                .documentType("Doc type")
-                .documentFileName("Doc filename")
-                .documentLink(DocumentLink.builder()
-                        .documentFilename("testingDoc")
-                        .documentBinaryUrl(DOCUMENT_URL)
-                        .documentUrl(DOCUMENT_URL)
-                        .build()).build();
+            .documentType("Doc type")
+            .documentFileName("Doc filename")
+            .documentLink(DocumentLink.builder()
+                .documentFilename("testingDoc")
+                .documentBinaryUrl(DOCUMENT_URL)
+                .documentUrl(DOCUMENT_URL)
+                .build()).build();
 
         sscsCaseData.setSscsInterlocDirectionDocument(interlocDoc);
 
@@ -748,22 +764,72 @@ public class DirectionIssuedAboutToSubmitHandlerTest {
         assertEquals(interlocDoc.getDocumentLink(), response.getData().getSscsInterlocDirectionDocument().getDocumentLink());
     }
 
-    public void givenGenerateNoticeIsSetToYesAndInterlocDocIsNotNull_thenReturnNull() {
+    @Test
+    void givenGenerateNoticeIsSetToYesAndInterlocDocIsNotNull_thenReturnNull() {
         assertTrue(sscsCaseData.getDocumentGeneration().getGenerateNotice().toBoolean());
 
         SscsInterlocDirectionDocument interlocDoc = SscsInterlocDirectionDocument.builder()
-                .documentType("Doc type")
-                .documentFileName("Doc filename")
-                .documentLink(DocumentLink.builder()
-                        .documentFilename("testingDoc")
-                        .documentBinaryUrl(DOCUMENT_URL)
-                        .documentUrl(DOCUMENT_URL)
-                        .build()).build();
+            .documentType("Doc type")
+            .documentFileName("Doc filename")
+            .documentLink(DocumentLink.builder()
+                .documentFilename("testingDoc")
+                .documentBinaryUrl(DOCUMENT_URL)
+                .documentUrl(DOCUMENT_URL)
+                .build()).build();
 
         sscsCaseData.setSscsInterlocDirectionDocument(interlocDoc);
 
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
         assertNull(response.getData().getSscsInterlocDirectionDocument());
+    }
+
+    @Test
+    void willWipeHmcHearingTypeIfSelectNextHmcHearingTypeIsNull() {
+        when(caseDetails.getState()).thenReturn(State.READY_TO_LIST);
+        sscsCaseData.getExtendedSscsCaseData().setSelectNextHmcHearingType(null);
+        sscsCaseData.setHmcHearingType(HmcHearingType.SUBSTANTIVE);
+        final PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
+        assertNull(response.getData().getExtendedSscsCaseData().getSelectNextHmcHearingType());
+    }
+
+    @Test
+    void willWipeHmcHearingTypeIfSelectNextHmcHearingTypeIsNo() {
+        when(caseDetails.getState()).thenReturn(State.READY_TO_LIST);
+        sscsCaseData.getExtendedSscsCaseData().setSelectNextHmcHearingType(NO);
+        sscsCaseData.setHmcHearingType(HmcHearingType.SUBSTANTIVE);
+        sscsCaseData.getAppeal().setHearingOptions(HearingOptions.builder().hmcHearingType(HmcHearingType.SUBSTANTIVE).build());
+        final PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
+        assertEquals(NO, response.getData().getExtendedSscsCaseData().getSelectNextHmcHearingType());
+        assertNull(response.getData().getAppeal().getHearingOptions().getHmcHearingType());
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = HmcHearingType.class, names = {"SUBSTANTIVE", "DIRECTION_HEARINGS"})
+    void willSetHmcHearingTypeInHearingOptionsNullIfselectNextHmcHearingTypeIsYes(HmcHearingType hmcHearingType) {
+        when(caseDetails.getState()).thenReturn(State.READY_TO_LIST);
+        sscsCaseData.getExtendedSscsCaseData().setSelectNextHmcHearingType(YES);
+        sscsCaseData.setHmcHearingType(hmcHearingType);
+        sscsCaseData.getAppeal().setHearingOptions(null);
+        final PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
+        assertEquals(YES, response.getData().getExtendedSscsCaseData().getSelectNextHmcHearingType());
+        assertEquals(hmcHearingType, response.getData().getHmcHearingType());
+        assertEquals(hmcHearingType, response.getData().getAppeal().getHearingOptions().getHmcHearingType());
+        assertEquals(HearingOptions.builder().hmcHearingType(hmcHearingType).build(), response.getData().getAppeal().getHearingOptions());
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = HmcHearingType.class, names = {"SUBSTANTIVE", "DIRECTION_HEARINGS"})
+    void willSetTypeOfHearingInHearingOptionsNotNullIfSelectNextTypeOfHearingIsYes(HmcHearingType hmcHearingType) {
+        when(caseDetails.getState()).thenReturn(State.READY_TO_LIST);
+        sscsCaseData.getExtendedSscsCaseData().setSelectNextHmcHearingType(YES);
+        sscsCaseData.setHmcHearingType(hmcHearingType);
+        sscsCaseData.getAppeal().setHearingOptions(HearingOptions.builder().agreeLessNotice("string").build());
+        final PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
+        assertEquals(YES, response.getData().getExtendedSscsCaseData().getSelectNextHmcHearingType());
+        assertEquals(hmcHearingType, response.getData().getHmcHearingType());
+        assertEquals(hmcHearingType, response.getData().getAppeal().getHearingOptions().getHmcHearingType());
+        HearingOptions expectedHearingOptions = HearingOptions.builder().agreeLessNotice("string").hmcHearingType(hmcHearingType).build();
+        assertEquals(expectedHearingOptions, response.getData().getAppeal().getHearingOptions());
     }
 }
