@@ -3,10 +3,11 @@ package uk.gov.hmcts.reform.sscs.evidenceshare.callback.handlers;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.CoreMatchers.nullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.Assert.assertTrue;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
-import static org.mockito.MockitoAnnotations.openMocks;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 import static uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType.SUBMITTED;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.EventType.UPDATE_OTHER_PARTY_DATA;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.State.INTERLOCUTORY_REVIEW_STATE;
@@ -16,72 +17,70 @@ import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import junitparams.JUnitParamsRunner;
-import junitparams.Parameters;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import java.util.List;
+import java.util.function.Consumer;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.sscs.ccd.callback.Callback;
 import uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType;
-import uk.gov.hmcts.reform.sscs.ccd.domain.*;
-import uk.gov.hmcts.reform.sscs.ccd.service.CcdService;
-import uk.gov.hmcts.reform.sscs.evidenceshare.service.PanelCompositionService;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Appeal;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Appointee;
+import uk.gov.hmcts.reform.sscs.ccd.domain.BenefitType;
+import uk.gov.hmcts.reform.sscs.ccd.domain.CcdValue;
+import uk.gov.hmcts.reform.sscs.ccd.domain.EventType;
+import uk.gov.hmcts.reform.sscs.ccd.domain.ExcludeDate;
+import uk.gov.hmcts.reform.sscs.ccd.domain.HearingOptions;
+import uk.gov.hmcts.reform.sscs.ccd.domain.OtherParty;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Representative;
+import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseData;
+import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseDetails;
+import uk.gov.hmcts.reform.sscs.ccd.domain.State;
+import uk.gov.hmcts.reform.sscs.ccd.domain.YesNo;
+import uk.gov.hmcts.reform.sscs.ccd.service.UpdateCcdCaseService;
+import uk.gov.hmcts.reform.sscs.evidenceshare.service.ListingStateProcessingService;
 import uk.gov.hmcts.reform.sscs.idam.IdamService;
-import uk.gov.hmcts.reform.sscs.idam.IdamTokens;
 
-
-@RunWith(JUnitParamsRunner.class)
+@ExtendWith(MockitoExtension.class)
 public class UpdateOtherPartyHandlerTest {
 
-    UpdateOtherPartyHandler handler;
-
-    private SscsCaseData sscsCaseData;
-
     @Mock
-    private CcdService ccdService;
+    private UpdateCcdCaseService updateCcdCaseService;
     @Mock
     private IdamService idamService;
 
-    @Mock
-    private Callback<SscsCaseData> callback;
-
-    @Mock
-    private CaseDetails<SscsCaseData> caseDetails;
+    UpdateOtherPartyHandler handler;
 
     @Captor
-    private ArgumentCaptor<SscsCaseData> captor;
+    private ArgumentCaptor<Consumer<SscsCaseDetails>> consumerArgumentCaptor;
 
-    @Before
+    @BeforeEach
     public void setUp() {
-        openMocks(this);
-
-        handler = new UpdateOtherPartyHandler(new PanelCompositionService(ccdService, idamService));
-
-        sscsCaseData = SscsCaseData.builder().ccdCaseId("ccdId").build();
-
-        when(idamService.getIdamTokens()).thenReturn(IdamTokens.builder().build());
-        when(callback.getEvent()).thenReturn(EventType.CONFIRM_PANEL_COMPOSITION);
-        when(callback.getCaseDetails()).thenReturn(caseDetails);
-        when(caseDetails.getCaseData()).thenReturn(sscsCaseData);
+        handler = new UpdateOtherPartyHandler(new ListingStateProcessingService(updateCcdCaseService, idamService));
     }
 
     @Test
     public void givenAValidSubmittedEvent_thenReturnTrue() {
-        assertTrue(handler.canHandle(SUBMITTED, HandlerHelper.buildTestCallbackForGivenData(
+        Assertions.assertTrue(handler.canHandle(SUBMITTED, HandlerHelper.buildTestCallbackForGivenData(
             SscsCaseData.builder()
                 .ccdCaseId("1")
                 .isFqpmRequired(YES)
                 .directionDueDate(LocalDate.now().toString())
-                .otherParties(Arrays.asList(buildOtherParty("2", HearingOptions.builder().build())))
+                .otherParties(List.of(buildOtherParty("2", HearingOptions.builder().build())))
                 .appeal(Appeal.builder().benefitType(BenefitType.builder().code("childSupport").build())
                     .build()).build(), INTERLOCUTORY_REVIEW_STATE, UPDATE_OTHER_PARTY_DATA)));
     }
 
-    @Test
-    @Parameters(method = "generateAllPossibleOtherPartyWithHearingOptions")
+    @ParameterizedTest
+    @MethodSource(value = "generateAllPossibleOtherPartyWithHearingOptions")
     public void givenFqpmSetAndDueDateSetAndAllOtherPartyHearingOptionsSet_thenCaseStateIsReadyToList(HearingOptions hearingOptions) {
 
         final Callback<SscsCaseData> callback = HandlerHelper.buildTestCallbackForGivenData(
@@ -95,15 +94,16 @@ public class UpdateOtherPartyHandlerTest {
 
         handler.handle(CallbackType.SUBMITTED, callback);
 
-        verify(ccdService).updateCase(captor.capture(),
-            eq(Long.valueOf(callback.getCaseDetails().getCaseData().getCcdCaseId())),
-            eq(EventType.READY_TO_LIST.getCcdType()), anyString(), anyString(), any());
+        verify(updateCcdCaseService).updateCaseV2(eq(Long.valueOf(callback.getCaseDetails().getCaseData().getCcdCaseId())),
+            eq(EventType.READY_TO_LIST.getCcdType()), anyString(), anyString(), any(), consumerArgumentCaptor.capture());
 
-        assertThat(captor.getValue().getDirectionDueDate(), is(nullValue()));
+        SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(callback.getCaseDetails().getCaseData()).build();
+        consumerArgumentCaptor.getValue().accept(sscsCaseDetails);
+        assertThat(sscsCaseDetails.getData().getDirectionDueDate(), is(nullValue()));
     }
 
-    @Test
-    @Parameters(method = "generateAllPossibleOtherPartyWithHearingOptions")
+    @ParameterizedTest
+    @MethodSource(value = "generateAllPossibleOtherPartyWithHearingOptions")
     public void givenFqpmSetAndNoDueDateSetAndAllOtherPartyHearingOptionsSet_thenCaseStateIsReadyToList(HearingOptions hearingOptions) {
 
         final Callback<SscsCaseData> callback = HandlerHelper.buildTestCallbackForGivenData(
@@ -117,13 +117,12 @@ public class UpdateOtherPartyHandlerTest {
 
         handler.handle(CallbackType.SUBMITTED, callback);
 
-        verify(ccdService).updateCase(eq(callback.getCaseDetails().getCaseData()),
-            eq(Long.valueOf(callback.getCaseDetails().getCaseData().getCcdCaseId())),
-            eq(EventType.READY_TO_LIST.getCcdType()), anyString(), anyString(), any());
+        verify(updateCcdCaseService).updateCaseV2(eq(Long.valueOf(callback.getCaseDetails().getCaseData().getCcdCaseId())),
+            eq(EventType.READY_TO_LIST.getCcdType()), anyString(), anyString(), any(), any(Consumer.class));
     }
 
-    @Test
-    @Parameters({"YES", "NO"})
+    @ParameterizedTest
+    @CsvSource({"YES", "NO"})
     public void givenFqpmSetAndNoDueDateSetAndNotAllOtherPartyHearingOptionsSet_thenCaseStateIsReadyToList(String isFqpmRequired) {
 
         final Callback<SscsCaseData> callback = HandlerHelper.buildTestCallbackForGivenData(
@@ -139,13 +138,12 @@ public class UpdateOtherPartyHandlerTest {
 
         handler.handle(CallbackType.SUBMITTED, callback);
 
-        verify(ccdService).updateCase(eq(callback.getCaseDetails().getCaseData()),
-            eq(Long.valueOf(callback.getCaseDetails().getCaseData().getCcdCaseId())),
-            eq(EventType.READY_TO_LIST.getCcdType()), anyString(), anyString(), any());
+        verify(updateCcdCaseService).updateCaseV2(eq(Long.valueOf(callback.getCaseDetails().getCaseData().getCcdCaseId())),
+            eq(EventType.READY_TO_LIST.getCcdType()), anyString(), anyString(), any(), any(Consumer.class));
     }
 
-    @Test
-    @Parameters({"YES", "NO"})
+    @ParameterizedTest
+    @CsvSource({"YES", "NO"})
     public void givenFqpmSetAndDueDateSetAndNotAllOtherPartyHearingOptionsSet_thenCaseStateIsNotListable(String isFqpmRequired) {
 
         final Callback<SscsCaseData> callback = HandlerHelper.buildTestCallbackForGivenData(
@@ -160,8 +158,7 @@ public class UpdateOtherPartyHandlerTest {
 
         handler.handle(CallbackType.SUBMITTED, callback);
 
-        verify(ccdService).updateCase(eq(callback.getCaseDetails().getCaseData()),
-            eq(Long.valueOf(callback.getCaseDetails().getCaseData().getCcdCaseId())),
+        verify(updateCcdCaseService).triggerCaseEventV2(eq(Long.valueOf(callback.getCaseDetails().getCaseData().getCcdCaseId())),
             eq(EventType.NOT_LISTABLE.getCcdType()), anyString(), anyString(), any());
     }
 
@@ -179,8 +176,7 @@ public class UpdateOtherPartyHandlerTest {
 
         handler.handle(CallbackType.SUBMITTED, callback);
 
-        verify(ccdService).updateCase(eq(callback.getCaseDetails().getCaseData()),
-            eq(Long.valueOf(callback.getCaseDetails().getCaseData().getCcdCaseId())),
+        verify(updateCcdCaseService).triggerCaseEventV2(eq(Long.valueOf(callback.getCaseDetails().getCaseData().getCcdCaseId())),
             eq(EventType.NOT_LISTABLE.getCcdType()), anyString(), anyString(), any());
     }
 
@@ -198,13 +194,12 @@ public class UpdateOtherPartyHandlerTest {
 
         handler.handle(CallbackType.SUBMITTED, callback);
 
-        verify(ccdService).updateCase(eq(callback.getCaseDetails().getCaseData()),
-            eq(Long.valueOf(callback.getCaseDetails().getCaseData().getCcdCaseId())),
+        verify(updateCcdCaseService).triggerCaseEventV2(eq(Long.valueOf(callback.getCaseDetails().getCaseData().getCcdCaseId())),
             eq(EventType.NOT_LISTABLE.getCcdType()), anyString(), anyString(), any());
     }
 
-    @Test
-    @Parameters(method = "generateAllPossibleOtherPartyWithHearingOptions")
+    @ParameterizedTest
+    @MethodSource(value = "generateAllPossibleOtherPartyWithHearingOptions")
     public void givenNoFqpmSetAndNoDueDateSetAndAllOtherPartyHearingOptionsSet_thenCaseStateIsNotListable(HearingOptions hearingOptions) {
 
         final Callback<SscsCaseData> callback = HandlerHelper.buildTestCallbackForGivenData(
@@ -218,13 +213,12 @@ public class UpdateOtherPartyHandlerTest {
 
         handler.handle(CallbackType.SUBMITTED, callback);
 
-        verify(ccdService).updateCase(eq(callback.getCaseDetails().getCaseData()),
-            eq(Long.valueOf(callback.getCaseDetails().getCaseData().getCcdCaseId())),
+        verify(updateCcdCaseService).triggerCaseEventV2(eq(Long.valueOf(callback.getCaseDetails().getCaseData().getCcdCaseId())),
             eq(EventType.NOT_LISTABLE.getCcdType()), anyString(), anyString(), any());
     }
 
-    @Test
-    @Parameters({"APPEAL_CREATED, 1", "DORMANT_APPEAL_STATE, 0", "DRAFT, 1", "DRAFT_ARCHIVED, 1",
+    @ParameterizedTest
+    @CsvSource({"APPEAL_CREATED, 1", "DORMANT_APPEAL_STATE, 0", "DRAFT, 1", "DRAFT_ARCHIVED, 1",
         "HEARING, 1", "INCOMPLETE_APPLICATION, 1", "INCOMPLETE_APPLICATION_INFORMATION_REQUESTED, 1",
         "INTERLOCUTORY_REVIEW_STATE, 1", "POST_HEARING, 1", "READY_TO_LIST, 1", "RESPONSE_RECEIVED, 0",
         "VALID_APPEAL, 1", "WITH_DWP, 0"})
@@ -240,12 +234,11 @@ public class UpdateOtherPartyHandlerTest {
 
         handler.handle(CallbackType.SUBMITTED, callback);
 
-        verify(ccdService, times(wantedNumberOfInvocations)).updateCase(eq(callback.getCaseDetails().getCaseData()),
-            eq(Long.valueOf(callback.getCaseDetails().getCaseData().getCcdCaseId())),
+        verify(updateCcdCaseService, times(wantedNumberOfInvocations)).triggerCaseEventV2(eq(Long.valueOf(callback.getCaseDetails().getCaseData().getCcdCaseId())),
             eq(EventType.NOT_LISTABLE.getCcdType()), anyString(), anyString(), any());
     }
 
-    private Object[] generateAllPossibleOtherPartyWithHearingOptions() {
+    private static Object[] generateAllPossibleOtherPartyWithHearingOptions() {
         return new Object[]{
             new Object[]{
                 HearingOptions.builder().wantsToAttend("Yes").build()
